--- a/finance.html
+++ b/finance.html
@@ -442,6 +442,38 @@
                                 <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
                                 <p>Duty 1</p>
                             </div>
+                            <div class="finance-duties-self">
+                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <p>Duty 1</p>
+                            </div>
+                            <div class="finance-duties-self">
+                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <p>Duty 1</p>
+                            </div>
+                            <div class="finance-duties-self">
+                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <p>Duty 1</p>
+                            </div>
+                            <div class="finance-duties-self">
+                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <p>Duty 1</p>
+                            </div>
+                            <div class="finance-duties-self">
+                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <p>Duty 1</p>
+                            </div>
+                            <div class="finance-duties-self">
+                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <p>Duty 1</p>
+                            </div>
+                            <div class="finance-duties-self">
+                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <p>Duty 1</p>
+                            </div>
+                            <div class="finance-duties-self">
+                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <p>Duty 1</p>
+                            </div>
                         </div> 
                     </div>
 
