--- a/user.html
+++ b/user.html
@@ -45,7 +45,22 @@
                     <h3>Hello, [USERNAME]!</h3>
                 </div>
                 <div class="specific-content">
-                    XXX
+                    <div class="user-content">
+                        <div>
+                            <label for="account-config-username">Username</label>
+                            <input id="account-config-username" class="user-input" type="text">
+                        </div>
+                        <div>
+                            <label for="account-config-email"> Email</label>
+                            <input id="account-config-email" class="user-input" type="text">
+                        </div>
+                        <div>
+                            <label for="account-config-password">Password</label>
+                            <input id="account-config-password" class="user-input" type="text">
+                        </div>
+                        <button id="btn-logout"> Logout </button>
+                    </div>
+                    
                 </div>
             </section>
         </main>
