--- a/finance.html
+++ b/finance.html
@@ -96,11 +96,13 @@
                                                         <option>Invests</option>
                                                         <option>Travel</option>
                                                     </select>
-                                                    <input placeholder="Value:" type="text">
-                                                    <input placeholder="Date:" type="datetime">
-                                                    <input placeholder="Description:" type="text">
-                                                    <button class="btn-add">Add</button>
 
+                                                    <form action="">
+                                                        <input placeholder="Value:" type="text">
+                                                        <input placeholder="Date:" type="date">
+                                                        <input placeholder="Description:" type="text">
+                                                        <button class="btn-add">Add</button>
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
@@ -137,10 +139,12 @@
                                                         <option>Invests</option>
                                                         <option>Travel</option>
                                                     </select>
-                                                    <input placeholder="Value:" type="text">
-                                                    <input placeholder="Date:" type="datetime">
-                                                    <input placeholder="Description:" type="text">
-                                                    <button class="btn-remove">Remove</button>
+                                                    <form action="">
+                                                        <input placeholder="Value:" type="text">
+                                                        <input placeholder="Date:" type="datetime">
+                                                        <input placeholder="Description:" type="text">
+                                                        <button class="btn-remove">Remove</button>
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
@@ -439,39 +443,23 @@
                         </div> 
                         <div id="finance-duties" class="finance-page">
                             <div class="finance-duties-self">
-                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <input class="checkbox" type="checkbox">
                                 <p>Duty 1</p>
                             </div>
                             <div class="finance-duties-self">
-                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <input class="checkbox" type="checkbox">
                                 <p>Duty 1</p>
                             </div>
                             <div class="finance-duties-self">
-                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <input class="checkbox" type="checkbox">
                                 <p>Duty 1</p>
                             </div>
                             <div class="finance-duties-self">
-                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <input class="checkbox" type="checkbox">
                                 <p>Duty 1</p>
                             </div>
                             <div class="finance-duties-self">
-                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
-                                <p>Duty 1</p>
-                            </div>
-                            <div class="finance-duties-self">
-                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
-                                <p>Duty 1</p>
-                            </div>
-                            <div class="finance-duties-self">
-                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
-                                <p>Duty 1</p>
-                            </div>
-                            <div class="finance-duties-self">
-                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
-                                <p>Duty 1</p>
-                            </div>
-                            <div class="finance-duties-self">
-                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <input class="checkbox" type="checkbox">
                                 <p>Duty 1</p>
                             </div>
                         </div> 
