--- a/gym.html
+++ b/gym.html
@@ -105,10 +105,12 @@
                                                 </select>
                                                 <div class="gymExercisesContainer">
                                                     <div class="overlay-container-content-gym-exercises">
-                                                        <input class="gym-sets" type="number" placeholder="Set:" autocomplete="off" >
-                                                        <span>x</span>
-                                                        <input class="gym-reps" type="number" placeholder="Rep:">
-                                                        <input class="gym-exercise" type="text" placeholder="Exercise:" autocomplete="off">
+                                                        <form action="">
+                                                            <input class="gym-sets" type="number" placeholder="Set:" autocomplete="off" >
+                                                            <span>x</span>
+                                                            <input class="gym-reps" type="number" placeholder="Rep:">
+                                                            <input class="gym-exercise" type="text" placeholder="Exercise:" autocomplete="off">
+                                                        </form>
                                                         <button type="button" onclick="removeGymRowByButton(this)">
                                                             -
                                                         </button>
