--- a/user.html
+++ b/user.html
@@ -48,15 +48,15 @@
                     <div class="user-content">
                         <div>
                             <label for="account-config-username">Username</label>
-                            <input id="account-config-username" class="user-input" type="text">
+                            <input id="account-config-username" class="user-input" type="text" value="USERNAME" readonly >
                         </div>
                         <div>
                             <label for="account-config-email"> Email</label>
-                            <input id="account-config-email" class="user-input" type="text">
+                            <input id="account-config-email" class="user-input" type="email" value="USERNAME@gmail.com" readonly>
                         </div>
                         <div>
                             <label for="account-config-password">Password</label>
-                            <input id="account-config-password" class="user-input" type="text">
+                            <input id="account-config-password" class="user-input" type="password" value="Password" readonly>
                         </div>
                         <button id="btn-logout"> Logout </button>
                     </div>
